--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,37 +7,48 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "^5.0.4"
+django = "^5.0.7"
 django-environ = "^0.11.2"
-django-allauth = "^0.61.1"
+django-allauth = "^0.63.6"
 django-autoslug = "^1.9.9"
 django-taggit = "^5.0.1"
-psycopg = {extras = ["c"], version = "^3.1.18"}
-psycopg-pool = "^3.2.1"
-pillow = "^10.3.0"
-pillow-avif-plugin = "^1.4.3"
+psycopg = {extras = ["c"], version = "^3.2.1"}
+psycopg-pool = "^3.2.2"
+pillow = "^10.4.0"
+pillow-avif-plugin = "^1.4.6"
 argon2-cffi = "^23.1.0"
+django-htmx = "^1.18.0"
+daphne = "^4.1.2"
+
+[tool.poetry.group.cms.dependencies]
+django-cms = "^4.1.1"
+djangocms-text-ckeditor = "^5.1.5"
+djangocms-frontend = "^1.3.3"
+django-filer = "^3.1.3"
+djangocms-alias = "^2.0.1"
+djangocms-admin-style = "^3.3.1"
+django-sekizai = "^4.1.0"
 
 
 [tool.poetry.group.dev.dependencies]
-whitenoise = {extras = ["brotli"], version = "^6.6.0"}
-django-debug-toolbar = "^4.3.0"
-black = "^24.4.0"
-ruff = "^0.3.7"
-mypy = "^1.9.0"
-django-stubs = "^4.2.7"
-pytest = "^8.1.1"
+whitenoise = {extras = ["brotli"], version = "^6.7.0"}
+django-debug-toolbar = "^4.4.6"
+black = "^24.4.2"
+ruff = "^0.5.2"
+mypy = "^1.10.1"
+django-stubs = "^5.0.2"
+pytest = "^8.2.2"
 pytest-django = "^4.8.0"
 pytest-sugar = "^1.0.0"
-coverage = "^7.4.4"
+coverage = "^7.6.0"
 django-coverage-plugin = "^3.1.0"
 pip-tools = "^7.4.1"
 
 
 [tool.poetry.group.production.dependencies]
 gunicorn = "^22.0.0"
-boto3 = {extras = ["crt"], version = "^1.34.85"}
-django-storages = "^1.14.2"
+boto3 = {extras = ["crt"], version = "^1.34.144"}
+django-storages = "^1.14.4"
 
 [build-system]
 requires = ["poetry-core"]
