--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,7 @@ django = "^5.0.7"
 django-environ = "^0.11.2"
 django-allauth = "^0.63.6"
 django-autoslug = "^1.9.9"
-django-taggit = "^5.0.1"
+django-taggit = "^6.0.0"
 psycopg = {extras = ["c"], version = "^3.2.1"}
 psycopg-pool = "^3.2.2"
 pillow = "^10.4.0"
@@ -21,6 +21,7 @@ django-htmx = "^1.18.0"
 daphne = "^4.1.2"
 django-phonenumber-field = {extras = ["phonenumbers"], version = "^8.0.0"}
 django-jalali = "^7.0.0"
+django-pictures = "^1.3.3"
 
 [tool.poetry.group.cms.dependencies]
 django-cms = "^4.1.1"
